# SouthPass

./: .gitignore  CMakeLists.txt  README.md  build2.bat  build_app.bat  build_linux.sh  db.sql
config/: config.ini
includes/: applicationController.h  applicationController.hpp  backController.h  backIsConnected.h  backLoginSignIn.h  backParams.h  backPwdQuality.h  controler.h  credentialsWidget.h  credentialsWidget.hpp  cryptoModule.h  dataLeak.hpp  db.h  fileController.h  gui.h  gui_widgets.h  icon_data.h  jsonController.h  loginPage.h  loginPage.hpp  models.h  parametersPage.h  parametersPage.hpp  pincludes.h  pwdGenController.h  pwdGeneratorPage.h  pwdQuality.h  utils.h  webService.h  web_service.h
southpass-extension/: index.js  manifest.json  popup.js  popupLogin.html  style.css
southpassApi/: index.js  package.json  sendmail.php
southpassApi/src/controller/: UserController.js
southpassApi/src/middlewares/: authMiddleware.js  authorizationMiddleware.js  serverMiddleware.js
southpassApi/src/repository/: Database.js  UserRepository.js
southpassApi/src/routes/: users.js
southpassApi/src/services/: UserService.js
src/: db.c  main.c  main.cpp  web_service.c
src/apiModule/: apiController.c  jsonController.c  webService.c
src/backend/: LoginSignIn.c  backParams.c  backPwdQuality.c  controller.c  cryptoModule.c  fileController.c  isConnected.c  loginController.c  pwdGenController.c
src/db/: db.c  db_crud.c
src/frontend/: applicationController.cpp  credentialsPage.cpp  credsWidgets.cpp  creds_widget.cpp  creds_window.cpp  darkMode.css  dataLeakPage.cpp  gui_service.cpp  lightMode.css  loginPage.cpp  mainwindow.cpp  parametersPage.cpp  pwdGenerator.cpp  pwdQuality.cpp  qmainwindow.cpp
src/frontend/components/: credsForm.qml
src/frontend/css/: darkMode.css  lightMode.css
src/gui/: .gresource.xml  gui_service.c  gui_service.cpp  style.css
src/utils/: utils.c
src/webModule/: webService.c
src/web_module/: web_service.c
